# fitapp

./: .env.example  .gitignore  Makefile  docker-compose.yaml
auth/: Dockerfile  package.json  pnpm-lock.yaml
auth/src/: auth.ts  index.ts
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 604bcfab8d86_create_profiles_and_progress_tables.py
backend/app/: config.py  enums.py  main.py
backend/app/db/: session.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  profile.py  progress.py
backend/app/routers/: nutrition.py  users.py  workout.py
backend/app/schemas/: diet.py  nutrition.py  user.py  workout.py
backend/app/services/: calculator.py  diet_ai.py  workout_ai.py
backend/tests/: test_api.py  test_nutrition.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LOCAL_DEVELOPMENT.md  PRD.md
web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/(auth)/login/: page.tsx
web/app/(auth)/register/: page.tsx
web/app/dashboard/: layout.tsx  page.tsx
web/app/dashboard/diet/: page.tsx
web/app/dashboard/progress/: page.tsx
web/app/dashboard/workout/: page.tsx
web/app/onboarding/: page.tsx
web/components/layout/: AuthLayout.tsx  Navbar.tsx  Sidebar.tsx
web/components/ui/: Alert.tsx  Button.tsx  Card.tsx  Input.tsx  Loading.tsx  Select.tsx
web/hooks/: useAuth.ts
web/lib/: api.ts  queries.ts
web/store/: authStore.ts
web/types/: daisyui.d.ts  index.ts
