[project]
name = "fitapp-backend"
version = "0.1.0"
description = "AI-powered fitness and nutrition API"
requires-python = ">=3.14"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation & config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Auth
    "PyJWT>=2.8.0",
    # AI
    "openai>=1.10.0",
    # HTTP client (for tests and internal calls)
    "httpx>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
